--- a/src/Jili/ApiBundle/Resources/views/header.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/header.html.twig
@@ -1,19 +1,261 @@
 <link href="{{ asset('css/game_prompt.css')}}" rel="stylesheet" type="text/css"/>
+<link href="{{ asset('css/personal.css')}}" rel="stylesheet" type="text/css" />
+<link href="{{ asset('css/amazon.css')}}" rel="stylesheet" type="text/css" />
+<link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <script src="{{ asset('js/bottom.js')}}" type="text/javascript"></script>
 <script>
 $(document).ready(function(){
+  var activity_img = "{{ asset('images/amazonBanner.jpg') }}";
+  var reward_img = "{{ asset('images/codeReward.jpg') }}";
+  $('.amazon').hide();
+  $('.blackBg').hide();
+  $("#amazonEmpty").hide();
+  $("#reward").hide();
   {% if app.session.get('uid') %}
-      $.ajax({
-            url: "{{ path('_default_isExistVist') }}",
-            post: "GET",
+      $(".closeBtn").click(function(){
+          $('.amazon').hide();
+          $('.blackBg').hide();
+      });
+      $(".infoFinish").click(function(){
+          var  sex =  $("input[name='sex']:checked").val();
+          var  year = $("#year").val();
+          var  month = $("#month").val();
+          var province = $("#province").val();
+          var city = $("#city").val();
+          var tel = $("#tel").val();
+          var income = $("input[name='income']:checked").val();
+          var hobbys = document.getElementsByName("hobby");
+          var chestr="";
+          for(var i=0;i<hobbys.length;i++){
+             if(hobbys[i].checked==true){
+                  chestr += hobbys[i].value+",";
+              }
+          }
+          $.ajax({  
+            url: "{{ path('_user_registerReward') }}",
+            type: "POST",
+            data: "sex="+sex+"&year="+year+"&month="+month+"&province="+province+"&city="+city+"&tel="+tel+"&income="+income+"&hobby="+chestr,
             success:function(data){
-                if(data==1){
-                  $("#playGame").addClass("gameset");
+                var obj = eval(data);
+                if(obj[0]['code']==2){
+                   $("#update").hide();
+                   $("#reward").show();
+                   $(".codeReward").html(obj[0]['couponOd']);
+                   $(".codeReward.blue").html(obj[0]['couponElec']);
+                   $('.amazonHref').attr('href',"http://count.chanet.com.cn/click.cgi?a=480534&d=338264&u={{ app.session.get('uid') }}&e=45"); 
+                }
+                 if(obj[0]['code']==3){
+                    amazonEmpty(); 
+                }
+                if(obj[0]['code']==4){
+                    $(".error").html("<font class='codeflag'>除手机外都为必填</font>");
+
+                }
+                if(obj[0]['code']==5){
+                    $(".error").html("<font class='codeflag'>手机格式错误</font>");
+
                 }
             }
           });
+ 
+      });
+      isVisit();
+      var host = window.location.host;
+      if(window.location.href != host+'?banner=info'){
+            isExistInfo();
+             
+      }
+      showInfo();
+      getYear_amazon(); 
+      getProince_amazon();
+      getIncome();
+      getHobby();
+
   {% endif %}
 });
+
+function isVisit(){
+   $.ajax({
+          url: "{{ path('_default_isExistVist') }}",
+          type: "GET",
+          success:function(data){
+              if(data==1){
+                $("#playGame").addClass("gameset");
+              }
+          }
+        });
+}
+
+function showInfo(){
+     $.ajax({
+          url: "{{ path('_user_userInfo') }}",
+          type: "GET",
+          success:function(data){
+             var obj = eval(data);
+             $('.login').html(obj[0]['email']);
+             $('.nick').html(obj[0]['nick']);
+             if(obj[0]['sex']==1){
+                document.getElementById("man").checked=true;
+             }
+             if(obj[0]['sex']==2){
+                document.getElementById("feman").checked=true;
+             }
+             if(obj[0]['mobile']){
+                $("#tel").val(obj[0]['mobile']);
+             }
+   
+          }
+      });
+}
+
+function showAmazon(info,couponOd,couponElec,uid){
+    if(info&&info==1){
+       isExistInfo();
+    }else if(info==2){
+       amazonReward();
+       $('#update').hide();
+       $("#reward").show();
+       $(".codeReward").html(couponOd);
+       $(".codeReward.blue").html(couponElec);
+       $('.amazonHref').attr('href',"http://count.chanet.com.cn/click.cgi?a=480534&d=338264&u="+uid+"&e=45"); 
+    }else if(info==3){
+       amazonReward();
+       amazonEmpty();  
+    }
+}
+
+function amazonEmpty(){
+  $("#update").hide();
+  $("#amazonEmpty").show();    
+}
+
+function amazonReward(){
+   $('.blackBg').show();
+   $('.amazon').show();
+   if($('body').height() < $('.amazon').height() + 240){
+      $('.blackBg').height($('.amazon').height() + 400)
+   }else{
+      $('.blackBg').height($('body').height())
+   }
+}
+
+function isExistInfo(){
+  $.ajax({
+            url: "{{ path('_user_isExistInfo') }}",
+            type: "GET",
+            success:function(data){
+                if(data==1){
+                  $.ajax({
+                        url: "{{ path('_default_infoVisit') }}",
+                        type: "GET",
+                        success:function(data){
+                            if(data==1){
+                                 amazonReward();
+                            }
+                        }
+                  });    
+                }
+            }
+          });
+}
+function getIncome(){
+  $.ajax({
+      url: "{{ path('_user_income') }}",
+      type: "GET",
+      success:function(data){
+        var obj = eval(data);
+        var html = '';
+        for(var i=0;i<obj.length;i++){ 
+      html += "<input name='income' type='radio' value='"+obj[i]['id']+"' >"+obj[i]['income'];  
+        }
+        $(".income").html(html); 
+      }
+        });
+}
+function getHobby(){
+  $.ajax({
+      url: "{{ path('_user_hobby') }}",
+      type: "GET",
+      success:function(data){
+        var obj = eval(data);
+        var html = '';
+        for(var i=0;i<obj.length;i++){ 
+      html += "<input name='hobby' type='checkbox' value='"+obj[i]['id']+"' >"+obj[i]['hobby'];  
+        }
+        $(".hobby").html(html); 
+      }
+        });
+}
+
+function getProince_amazon(){
+  $.ajax({
+      url: "{{ path('_user_province') }}",
+      type: "GET",
+      success:function(data){
+        var obj = eval(data);
+        var html = "<option value='0'>请选择省</option>";
+        for(var i=0;i<obj.length;i++){ 
+      html += "<option value='"+obj[i]['id']+"' >"+obj[i]['provinceName']+"</option>";  
+        }
+        $("#province").html(html); 
+      }
+        });
+}
+
+function getYear_amazon(){
+      var year = $("#year");  
+      var month = $("#month");  
+    
+      var yearhtml = '';
+      var monthhtml = '';
+      var date = new Date();  
+      var y = date.getFullYear();  
+      yearhtml += "<option value='0'>请选择年</option>";   
+      for (var i = 1940; i <= y ; i++) {  
+ 
+         yearhtml += "<option value='"+i+ "' >"+i+"</option>";
+      } 
+      year.html(yearhtml);
+      monthhtml += "<option value='0'>请选择月</option>";   
+      for (var i = 1; i < 13; i++) {  
+    
+          monthhtml += "<option value='"+i+ "' >"+i+"</option>"; 
+      }
+      month.html(monthhtml);
+}
+function selectYear_amazon(){
+  var month = $("#month"); 
+  if($("#year").val()=='0'){
+    month.get(0).options.length = 0; 
+    month.get(0).options.add(new Option("请选择月", "0"));  
+  }else{
+    month.get(0).options.length = 0; 
+    month.get(0).options.add(new Option("请选择月", "0"));  
+    for (var i = 1; i < 13; i++) {  
+            month.get(0).options.add(new Option(i, i));  
+    }
+  }
+}
+
+function selectCity_amazon(){
+  var html = ''; 
+  if($("#province").val()!=0){
+     $.ajax({
+              url: "{{ path('_user_getCity') }}?cid="+$('#province').val(),
+              type: "GET",
+              success:function(data){
+                var obj = eval(data);
+                for(var i=0;i<obj.length;i++){ 
+                    html += "<option value='"+obj[i]['id']+"'>"+obj[i]['cityName']+"</option>";                 
+                }
+                $("#city").html(html); 
+              }
+          });
+  }else{
+      html += "<option value='0'>请选择地区</option>";   
+      $("#city").html(html);
+  }
+}
 </script>
 <header>
   <section>
@@ -34,3 +276,109 @@ $(document).ready(function(){
 
   </section>
 </header>
+<div class="blackBg"></div>
+<div class="amazon">
+<a class="closeBtn"><img src="{{ asset('images/closeBtn.jpg') }}"></a>
+
+<div id="amazonEmpty"><img src="{{ asset('images/amazonEmpty.jpg') }}"></div>
+<div id="reward">
+
+<p><img src="{{ asset('images/amazonReward.jpg') }}"><a class="amazonHref" target="_blank"><img src="{{ asset('images/amazonHref.jpg') }}"></a></p>
+
+<div class="cardDiv">
+  <img src="{{ asset('images/amazonCard1.jpg') }}">
+  您的礼品卡号:<font class='codeReward'></font>
+  <p><b>使用说明</b><br />
+1.单张订单购买亚马逊运动户外类商品（仅限同亚马逊直接销售和发货，同时鞋靴产品除外）。<br />
+2.在支付页面“礼品卡或促销优惠券”处将优惠码输入，结算时商品均可享受满299元减20元的优惠。（在8月26日至9月28日期间，该优惠券可与运动户外商品满299元减50元的礼券同时使用。）<br />
+3.每个用户ID只能使用优惠码一次，不可重复享受优惠。<br />
+4.活动时间：2013年8月26日——2013年10月20日。</p>
+</div>
+<div class="cardDiv">
+  <img src="{{ asset('images/amazonCard2.jpg') }}">
+  您的礼品卡号:<font class='codeReward blue'></font>
+  <p><b>使用说明</b><br />
+1.单张订单购买亚马逊自营小家电产品（飞利浦品牌商品和第三方卖家商品除外）。<br />
+2.本活动优惠不可与其他活动同时使用；<br />
+3.每个用户ID只能使用优惠码一次，不可重复享受优惠；<br />
+4.活动时间：013年9月5日——2013年10月15日；</p>
+</div>
+
+</div>
+
+<section id= "update">
+<form method="post" id="actForm">
+    <div class="content info" style="padding-top:40px;">
+    <div class="regTitle"><img src="{{ asset('images/regTitle.jpg') }}"></div>
+      <ul>
+        <li>
+          <dd>登录账号：</dd>
+          <dt class='login'></dt>
+        </li>
+        <li style="width:40%;">
+          <dd>昵  称：</dd>
+          <dt class='nick'></dt>
+        </li>
+	 <li style="width:60%;">
+          <dd><font style="color:#EE472C;"> * </font>性  别：</dd>
+          <dt>
+            <input name="sex" type="radio" value="1" id="man">
+            男
+            <input name="sex" type="radio" value="2" id="feman">
+            女</dt>
+        </li>
+	 <li style="width:40%;"><dd><font style="color:#EE472C;"> * </font>出生年月：</dd>
+            <dt><select id="year" name="year" onchange="selectYear_amazon()"></select>      
+            &nbsp;<select id="month" name="month"></select>      
+          </dt>
+	</li>
+
+	<li style="width:60%;"><dd><font style="color:#EE472C;"> * </font>地区：</dd>
+            <dt><select id="province" name="province" onchange="selectCity_amazon()">
+            <option value="0">请选择省</option>
+              
+            </select>
+            <select id="city" name="city"><option value='0'>请选择地区</option>
+              </select>
+              </dt></li>
+        <li>
+
+	 <li>
+          <dd>手机号码：</dd>
+          <dt>
+        <input name="tel" type="text" value="" id="tel">
+          </dt>
+        </li>
+
+	<li>
+          <dd><font style="color:#EE472C;"> * </font>月收入：</dd>
+          <dt class="income">
+          </dt>
+        </li>
+
+	<li>
+          <dd><font style="color:#EE472C;"> * </font>兴趣爱好：</dd>
+          <dt class="hobby">
+         
+          </dt>
+        </li>
+
+    <li><dd>&nbsp;</dd>
+      <dt class="error"> 
+      </dt>
+    </li>
+
+	<li><dd>&nbsp;</dd>
+          <dt class="submitDt"> 
+              <input name='update' type='button' value='保存' class='infoFinish'>
+          </dt>
+        </li>
+
+
+      </ul>
+    </div>
+</form>
+  </section>
+
+
+  </div>
