对应  issue #183 文字修改

--- a/src/Jili/ApiBundle/Resources/views/User/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/info.html.twig
@@ -195,7 +195,7 @@ function selectCity(){
   var html = ''; 
   if($("#provinceInfo").val()!=0){
      $.ajax({
-              url: "{{ path('_user_getCity') }}?cid="+$('#province').val(),
+              url: "{{ path('_user_getCity') }}?cid="+$('#provinceInfo').val(),
               post: "GET",
               success:function(data){
                 var obj = eval(data);
