对应 issue #183 css修改

--- a/src/Jili/ApiBundle/Resources/views/header.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/header.html.twig
@@ -300,7 +300,7 @@ function selectCity_amazon(){
 
 <div class="cardDiv">
   <img src="{{ asset('images/amazonCard1.jpg') }}">
-  您的礼品卡号:<font class='codeReward'></font>
+  礼品卡号:<font class='codeReward'></font>
   <p><b>使用说明</b><br />
 1.单张订单购买亚马逊运动户外类商品（仅限同亚马逊直接销售和发货，同时鞋靴产品除外）。<br />
 2.在支付页面“礼品卡或促销优惠券”处将优惠码输入，结算时商品均可享受满299元减20元的优惠。（在8月26日至9月28日期间，该优惠券可与运动户外商品满299元减50元的礼券同时使用。）<br />
@@ -309,7 +309,7 @@ function selectCity_amazon(){
 </div>
 <div class="cardDiv">
   <img src="{{ asset('images/amazonCard2.jpg') }}">
-  您的礼品卡号:<font class='codeReward blue'></font>
+  礼品卡号:<font class='codeReward blue'></font>
   <p><b>使用说明</b><br />
 1.单张订单购买亚马逊自营小家电产品（飞利浦品牌商品和第三方卖家商品除外）。<br />
 2.本活动优惠不可与其他活动同时使用；<br />
