--- a/web/css/amazon.css
+++ b/web/css/amazon.css
@@ -39,11 +39,13 @@ a.amazonHref{
 }
 .amazon #getPoint{
 	position: absolute;
+	display: none;
 	top: 100px;
 	left: 290px;
 }
 .amazon #amazonEmpty {
-    margin: 60px 0 120px;
+	display: none;
+    padding: 60px 0 120px;
     text-align: center;
 }
 .amazon #hasReward{
@@ -66,7 +68,6 @@ a.amazonHref{
     border-radius: 5px 5px 5px 5px;
     font-size: 14px;
     left: 0;
-    margin: auto;
     padding-top: 200px;
     position: absolute;
     right: 0;
@@ -74,8 +75,10 @@ a.amazonHref{
     width: 864px;
     z-index: 9999;
     box-shadow: 0 0 5px #333333;
+    display: none;
 }
 .blackBg{
+	display: none;
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -88,6 +91,7 @@ a.amazonHref{
 }
 .amazon #update{
     position: relative;
+    display: none;
 }
 .amazon .closeBtn{
 	position: absolute;
