--- a/src/Jili/ApiBundle/Resources/views/header.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/header.html.twig
@@ -365,7 +365,7 @@ function selectCity_amazon(){
         </li>
 
 	<li>
-          <dd><font style="color:#EE472C;"> * </font>月收入：</dd>
+          <dd><font style="color:#EE472C;"> * </font>个人月收入：</dd>
           <dt class="income">
           </dt>
         </li>
