--- a/src/Jili/ApiBundle/Resources/views/Admin/importCpsAdver.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/importCpsAdver.html.twig
@@ -6,10 +6,10 @@
 
 </HEAD>
 <BODY>
-<form action="{{ path('_admin_importAdver') }}" method="post" id="form1" enctype="multipart/form-data" >
+<form action="{{ path('_admin_importCpsAdver') }}" method="post" id="form1" enctype="multipart/form-data" >
 <table align='center'>
 <tr><td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr><td><h3>导入cpa数据:</h3></td><td>&nbsp;</td></tr>
+<tr><td><h3>导入cps数据:</h3></td><td>&nbsp;</td></tr>
 <tr><td>csv文件:<input type="file" name="csv" /></td><td><input type="submit" name="add" value="提 交"/></td></tr>
 
 
