--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/shoppinglist.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/shoppinglist.html.twig
@@ -60,7 +60,7 @@ function goto(aid){
          {% if item.incentiveType==1 %}
                      <span class="rebate">{{ item.incentive }}米粒</span>
              {% elseif item.incentiveType==2 %}
-                     <span class="rebate">最高返{{ item.incentiveRate/100 }}%</span>
+                     <span class="rebate">最高返{{ item.reward_rate/10000 }}%</span>
              {% else %}
              {% endif %}
         </p>
@@ -74,7 +74,7 @@ function goto(aid){
          {% if item.incentiveType==1 %}
                 <p class="rebate"><em>{{ item.incentive }}米粒</em></p>
          {% elseif item.incentiveType==2 %}
-                <p class="rebate">最高返<em>{{ item.incentiveRate/100 }}%</em></p>
+                <p class="rebate">最高返<em>{{ item.reward_rate/10000 }}%</em></p>
           {% else %}
          {% endif %}
         <div class="hover">
@@ -83,7 +83,7 @@ function goto(aid){
                              <div class="text">{{ item.incentive }}米粒</div>
                         {% elseif item.incentiveType==2 %}
                             <div class="text">最高返<br>
-                            <em>{{ item.incentiveRate/100 }}%</em></div>
+                            <em>{{ item.reward_rate/10000 }}%</em></div>
                          {% else %}
                      {% endif %}
              </div>
