对应 issue #143 修改后台会员返利

--- a/src/Jili/ApiBundle/Resources/views/Admin/rewardRate.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/rewardRate.html.twig
@@ -17,11 +17,8 @@
 </table>
 {% if search %}
 <table align='center'>
-	 <tr><td>用户名:{{ search.email }}</td><td>昵称:{{ search.nick }}</td><td>返利倍数:<input type="text" name="multiple" value="{{ search.rewardMultiple }}" size="6"/></td><td><input type="submit" name="edit" value="编 辑"/></td></tr>
-
+	 <tr><td>用户名:{{ search.email }}</td><td>昵称:{{ search.nick }}</td><td>返利倍数:<input type="text" name="multiple" value="{% if multiple %}{{ multiple }}{% else %}{{ search.rewardMultiple }}{% endif %}" size="6"/></td><td><input type="submit" name="edit" value="编 辑"/></td></tr>
 </table>
 {% endif %}
 </form>
 </BODY></HTML>	
-
-
