--- a/src/Jili/ApiBundle/Resources/views/Default/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/info.html.twig
@@ -3,12 +3,14 @@
         {{  app.session.set('uid',app.request.cookies.get('jili_uid')) }}
         {{  app.session.set('nick',app.request.cookies.get('jili_nick')) }}
         {% if app.session.get('uid') %}
+            <a class="newms">新消息(<span id="countMessage"></span>)</a>
              <a class="log" href="{{ path('_user_info') }}">{{ app.session.get('nick') }}</a><a class="reg" href="{{ path('_user_loginOut') }}">退出</a>
         {% else %}
             <a class="log" href="{{ path('_user_login') }}">登录</a><a class="reg" href="{{ path('_user_reg') }}">注册</a>
         {% endif %}   
 {%  else %}
         {% if app.session.get('uid') %}
+             <a class="newms">新消息(<span id="countMessage"></span>)</a>
              <a class="log" href="{{ path('_user_info') }}">{{ app.session.get('nick') }}</a><a class="reg" href="{{ path('_user_loginOut') }}">退出</a>
         {% else %}
             <a class="log" href="{{ path('_user_login') }}">登录</a><a class="reg" href="{{ path('_user_reg') }}">注册</a>
